# PDF-Generator-Service

./: .gitignore  Dockerfile  Dockerfile-gfonts  FONTS.md  README.md  docker-compose.yaml  gunicorn.conf.py  pyproject.toml
app/: __init__.py
env/: __init__.py
