[project]
name = "PDF-Generator-Service"
version = "1.0.0"
description = "An API service for generating PDFs from given html"
requires-python = ">=3.13"
dependencies = [
    "flask==3.0.3",
    "weasyprint>=66.0",
    "pyqwe>=3.1.1",
    "marshmallow>=4.0.1",
    "flask-orjson>=2.0.0",
    "granian>=2.6.0",
    "python-dotenv>=1.2.1",
]

[tool.pyqwe]
dev = "*:flask run --port 9898 --debug"
granian = [
    "@sync",
    "env:load",
    "*:granian app:main"
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
    "ruff>=0.14.0",
]
